--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -12,7 +12,6 @@ source(here::here("code", "00_setup-environment.R"))
 library(crosstalk) # for drop down menus
 library(phsstyles)
 library(htmltools)
-library(phsstyles)
 
 # Write numbers with thousands separator
 knit_hooks$set(inline = function(x){
@@ -31,6 +30,7 @@ detach("package:tidylog", unload = TRUE)
 
 # Load functions
 walk(dir(here::here("functions"), full.names = TRUE), source)
+
 
 # Load PDS data
 pds <- read_rds(get_mi_data_path("final_data", ext = "rds", test_output = test_output)) %>% 
@@ -52,29 +52,70 @@ err <- read_rds(get_mi_data_path("error_data", ext = "rds", test_output = test_o
                                 "Unknown",
                                 str_sub(ijb, 11, -1)))
 
-# calculate final data referrals for Scotland and health boards
+# calculate referrals for Scotland and health boards
 pds_ijb <- pds %>% arrange(ijb)
 
-pds_scot <- pds %>% group_by(health_board = "Scotland", ijb = "Scotland", fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>%   summarise(referrals = sum(referrals), .groups = "drop")
+pds_ijb %<>% rename(geog = ijb) 
+
+pds_ijb$geog<- factor(pds_ijb$geog, levels = unique(pds_ijb$geog))
+
+pds_scot <- pds %>% group_by(health_board = "Scotland", ijb = "Scotland", fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>%  summarise(referrals = sum(referrals), .groups = "drop")
+
+pds_scot %<>% rename(geog = ijb) 
+
+pds_scot$geog<- factor(pds_scot$geog, levels = unique(pds_scot$geog))
 
 pds_hb <- pds %>% group_by(health_board, fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>% 
   summarise(referrals = sum(referrals), .groups = "drop") %>% mutate(ijb = health_board, .before = fy)
 
+pds_hb %<>% rename(geog = ijb) 
+
+pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
+
 # combine data for ijb, hb and Scotland
 pds_all <- bind_rows(pds_scot, pds_hb, pds_ijb)
 
-pds_all %<>% rename(geog = ijb) 
-
 pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
 
+#get totals for all geogs, hbs, ijbs, scotland
+pds_all_totals <- pds_all %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
 
-# load completion data
+pds_ijb_totals <- pds_ijb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
 
-comp_data <- read_rds(get_mi_data_path("comp_data", ext = "rds", test_output = test_output))
+pds_hb_totals <- pds_hb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
 
-comp_data$geog <- factor(comp_data$geog, levels = unique(pds_all$geog))
+pds_scot_totals <- pds_scot %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
 
-comp_data %<>% arrange(fy, geog)
+
+#get totals for all geogs, hbs, ijbs, scotland with LARGE AGE GROUPS
+pds_all_totals_2 <- bind_rows(pds_all_totals,
+  pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+)
+
+pds_all_totals_2$age_grp_2<- factor(pds_all_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+
+pds_ijb_totals_2 <- bind_rows(pds_ijb_totals,
+    pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+)
+
+pds_ijb_totals_2$age_grp_2<- factor(pds_ijb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+
+
+pds_hb_totals_2 <- bind_rows(pds_hb_totals,
+    pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+)
+
+pds_hb_totals_2$age_grp_2<- factor(pds_hb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+
+
+pds_scot_totals_2 <- bind_rows(pds_scot_totals,
+    pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+)
+
+pds_scot_totals_2$age_grp_2<- factor(pds_scot_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+
+#load population rates data
+pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/pop_data.rds")
 
 #create year lists
 provisional_year <- paste0(as.numeric(substr(last(finalised_years),1,4)) + 1,
@@ -89,6 +130,9 @@ last_full_year <- if_else(qt == 4, current_fy, paste0(as.numeric(substr(fy,1,4))
 all_years <- unique(pds_all$fy)
 
 if(qt == 4){full_years = all_years}else{full_years = all_years[-length(all_years)]}
+
+#load completion data
+comp_data <- read_rds(get_mi_data_path("comp_data", ext = "rds", test_output = test_output))
 
 
 ```
@@ -377,131 +421,21 @@ Row {.tabset data-height=765}
 
 ### **Ethnic Group**
 
-<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px"> Percentage of records with missing/unknown entry (NA/codes 98/99) for Ethnic Group</h2>
-
+<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px">Number and Percentage of referrals with NA or code 98/99 entry (Unknown) for Ethnic Group</h2>
 ```{r ethnic-group-table}
 ethnic_comp_data<-comp_data %>%
-  filter(field_name == "ethnic_group") %>% select(geog, fy, perc_of_records_missing_not_known) %>% 
+  filter(field_name == "ethnic_group") %>% 
+  select(geog, fy, number_of_records, perc_of_records_missing_not_known) %>% 
   mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>% 
-  pivot_wider(names_from = fy, values_from = perc_of_records_missing_not_known) %>% 
-  rename(`Health Board/Integration Authority` = geog) %>%
-  slice(2:46,1)# %>% 
-  # kable() %>%
-  # kable_styling(full_width = FALSE) %>%
-  # row_spec(46, bold = TRUE) %>%
-  # scroll_box(height = "700px")
-
-bscols(widths = 12,
-       div(style = css(width="98%", height="650px", margin="15px"),
-          DT::datatable(ethnic_comp_data, 
-                        rownames = TRUE, 
-                        extensions = "FixedColumns",
-              options = list(pageLength = 46,
-                             scrollX = TRUE,
-                             fixedColumns = list(leftColumns = 1),
-                             scrollY = TRUE,
-                             dom = "t",
-                             ordering = FALSE,
-                             columnDefs = list(list(visible = F, targets = 0),
-                                              list(className = 'dt-right', targets = 2:length(all_years)+2)
-                             ))) %>%
-        DT::formatStyle(0, target = "row",
-              fontWeight = DT::styleEqual(dim(ethnic_comp_data)[1],"bold"))
-                        )
-       )
-
-```
-
-### **Accommodation Type**
-
-<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px"> Percentage of records with missing/unknown entry (NA/codes 98/99) for Accommodation Type</h2>
-
-```{r accommodation-table}
-accomm_comp_data <- comp_data %>%
-  filter(field_name == "accommodation_type") %>% select(geog, fy, perc_of_records_missing_not_known) %>% 
-  mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>% 
-  pivot_wider(names_from = fy, values_from = perc_of_records_missing_not_known) %>% 
-  rename(`Health Board/Integration Authority` = geog) %>%
-  slice(2:46,1)
-
-bscols(widths = 12,
-       div(style = css(width="98%", height="650px", margin="15px"),
-          DT::datatable(accomm_comp_data, 
-                        rownames = TRUE, 
-                        extensions = "FixedColumns",
-              options = list(pageLength = 46,
-                             scrollX = TRUE,
-                             fixedColumns = list(leftColumns = 1),
-                             scrollY = TRUE,
-                             dom = "t",
-                             ordering = FALSE,
-                             columnDefs = list(list(visible = F, targets = 0),
-                                              list(className = 'dt-right', targets = 2:length(all_years)+2)
-                             ))) %>%
-        DT::formatStyle(0, target = "row",
-              fontWeight = DT::styleEqual(dim(accomm_comp_data)[1],"bold"))
-                        )
-       )
-
-
-```
-
-### **Carer's Support**
-
-<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px"> Percentage of records with missing/unknown entry (NA/codes 98/99) for Carer Support</h2>
-
-```{r carer-table}
-carer_comp_data <- comp_data %>%
-  filter(field_name == "carers_support") %>% select(geog, fy, perc_of_records_missing_not_known) %>% 
-  mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>% 
-  pivot_wider(names_from = fy, values_from = perc_of_records_missing_not_known) %>% 
-  rename(`Health Board/Integration Authority` = geog) %>%
-  slice(2:46,1)
-
-bscols(widths = 12,
-       div(style = css(width="98%", height="650px", margin="15px"),
-          DT::datatable(carer_comp_data, 
-                        rownames = TRUE, 
-                        caption = htmltools::tags$caption(
-                       style = 'caption-side: bottom; text-align: left;',
-                       "Note that Carer's Support is an optional field"),
-                        extensions = "FixedColumns",
-              options = list(pageLength = 46,
-                             scrollX = TRUE,
-                             fixedColumns = list(leftColumns = 1),
-                             scrollY = TRUE,
-                             dom = "t",
-                             ordering = FALSE,
-                             columnDefs = list(list(visible = F, targets = 0),
-                                              list(className = 'dt-right', targets = 2:length(all_years)+2)
-                             ))) %>%
-        DT::formatStyle(0, target = "row",
-              fontWeight = DT::styleEqual(dim(carer_comp_data)[1],"bold"))
-                        )
-       )
-
-
-```
-
-### **Subtype of Dementia**
-
-<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px"> Percentage of records with missing/unknown entry (NA/codes 98/99) and Percentage of records Yet to be determined (YTBD) for Subtype of Dementia</h2>
-
-```{r subtype-table}
-subtype_comp_data<-comp_data %>%
-  filter(field_name == "subtype_of_dementia") %>% select(geog, fy, perc_of_records_missing_not_known, perc_of_records_ytbd) %>%
-  mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>%
-  mutate(perc_of_records_ytbd = paste0(perc_of_records_ytbd, "%")) %>%
-  pivot_wider(names_from = fy, values_from = c(perc_of_records_missing_not_known, perc_of_records_ytbd),
-              names_vary = "slowest") %>%
-  slice(2:46,1)
+  pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known),
+              names_vary = "slowest") 
 
 headers <- htmltools::withTags(table(
   class = 'display',
   thead(
     tr(
       th(colspan = 1, '    '),
-      th(rowspan = 2, "Health Board/Integration Authority Area"),
+      th(rowspan = 2, "Integration Authority Area/Health Board"),
       th(colspan = 2, '    2016/17'),
       th(colspan = 2, '    2017/18'),
       th(colspan = 2, '    2018/19'),
@@ -514,7 +448,146 @@ headers <- htmltools::withTags(table(
       th(colspan = 2, '    All')
     ),
     tr(
-      lapply(c(" ",rep(c("NA/98/99", "YTBD"), 10)), th)
+      lapply(c(" ",rep(c("Number of referrals", "% Unknown"), 10)), th)
+    )
+  )
+))
+
+
+bscols(widths = 12,
+       div(style = css(width="98%", height="650px", margin="15px"),
+          DT::datatable(ethnic_comp_data,
+                        container = headers,
+                        rownames = TRUE,
+                        extensions = "FixedColumns",
+              options = list(pageLength = 46,
+                             scrollX = TRUE,
+                             fixedColumns = list(leftColumns = 1),
+                             scrollY = TRUE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = F, targets = 0),
+                                                list(className = 'dt-right',
+                                                     targets = 2:(2*length(all_years)+3)))
+                             )) %>% 
+            DT::formatStyle(0, target = "row",
+              fontWeight = DT::styleEqual(dim(ethnic_comp_data)[1],"bold")) %>% 
+               DT::formatStyle(c(1,3,5,7,9,11,13,15,17,19), `border-right` = "solid 1px")
+            )
+       )
+
+
+```
+
+### **Accommodation Type**
+
+<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px">Percentage of referrals with NA or code 98/99 entry (Unknown) for Accommodation Type</h2>
+```{r accommodation-table}
+accom_comp_data<-comp_data %>%
+  filter(field_name == "accommodation_type") %>% 
+  select(geog, fy, number_of_records, perc_of_records_missing_not_known) %>% 
+  mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>% 
+  pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known),
+              names_vary = "slowest") 
+
+
+bscols(widths = 12,
+       div(style = css(width="98%", height="650px", margin="15px"),
+          DT::datatable(accom_comp_data,
+                        container = headers,
+                        rownames = TRUE,
+                        extensions = "FixedColumns",
+              options = list(pageLength = 46,
+                             scrollX = TRUE,
+                             fixedColumns = list(leftColumns = 1),
+                             scrollY = TRUE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = F, targets = 0),
+                                                list(className = 'dt-right',
+                                                     targets = 2:(2*length(all_years)+3)))
+                             )) %>% 
+            DT::formatStyle(0, target = "row",
+              fontWeight = DT::styleEqual(dim(accom_comp_data)[1],"bold")) %>% 
+               DT::formatStyle(c(1,3,5,7,9,11,13,15,17,19), `border-right` = "solid 1px")
+            )
+       )
+
+
+
+```
+
+### **Carer's Support**
+
+<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px">Percentage of referrals with NA or code 98/99 entry (Unknown) for Carer's Support</h2>
+```{r carer-table}
+carer_comp_data<-comp_data %>%
+  filter(field_name == "carers_support") %>% 
+  select(geog, fy, number_of_records, perc_of_records_missing_not_known) %>% 
+  mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>% 
+  pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known),
+              names_vary = "slowest") 
+
+
+bscols(widths = 12,
+       div(style = css(width="98%", height="650px", margin="15px"),
+          DT::datatable(carer_comp_data,
+                        container = headers,
+                        rownames = TRUE,
+                        caption = htmltools::tags$caption(
+                       style = 'caption-side: bottom; text-align: left;',
+                       "Note that Carer's Support is an optional field"),
+                        extensions = "FixedColumns",
+              options = list(pageLength = 46,
+                             scrollX = TRUE,
+                             fixedColumns = list(leftColumns = 1),
+                             scrollY = TRUE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = F, targets = 0),
+                                                list(className = 'dt-right',
+                                                     targets = 2:(2*length(all_years)+3)))
+                             )) %>% 
+            DT::formatStyle(0, target = "row",
+              fontWeight = DT::styleEqual(dim(carer_comp_data)[1],"bold")) %>% 
+               DT::formatStyle(c(1,3,5,7,9,11,13,15,17,19), `border-right` = "solid 1px")
+            )
+       )
+
+
+```
+
+### **Subtype of Dementia**
+
+<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px">Percentage of records with NA or code 98/99 entry (Unknown) and Percentage of records Yet to be determined (YTBD) for Subtype of Dementia</h2>
+```{r subtype-table}
+subtype_comp_data <- comp_data %>%
+  filter(field_name == "subtype_of_dementia") %>% 
+  select(geog, fy, number_of_records, perc_of_records_missing_not_known, perc_of_records_ytbd) %>%
+  mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>%
+  mutate(perc_of_records_ytbd = paste0(perc_of_records_ytbd, "%")) %>%
+  pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known, perc_of_records_ytbd),
+              names_vary = "slowest")
+  
+headers_ytbd <- htmltools::withTags(table(
+  class = 'display',
+  thead(
+    tr(
+      th(colspan = 1, '    '),
+      th(rowspan = 2, "Integration Authority Area/Health Board/"),
+      th(colspan = 3, '    2016/17'),
+      th(colspan = 3, '    2017/18'),
+      th(colspan = 3, '    2018/19'),
+      th(colspan = 3, '    2019/20'),
+      th(colspan = 3, '    2020/21'),
+      th(colspan = 3, '    2021/22'),
+      th(colspan = 3, '    2022/23'),
+      th(colspan = 3, '    2023/24'),
+      th(colspan = 3, '    2024/25'),
+      th(colspan = 3, '    All')
+    ),
+    tr(
+      lapply(c(" ",rep(c("Number of referrals", "% Unknown", "% YTBD"), 10)), th)
     )
   )
 ))
@@ -523,7 +596,7 @@ headers <- htmltools::withTags(table(
 bscols(widths = 12,
        div(style = css(width="98%", height="650px", margin="15px"),
           DT::datatable(subtype_comp_data,
-                        container = headers,
+                        container = headers_ytbd,
                         rownames = TRUE,
                         caption = htmltools::tags$caption(
                        style = 'caption-side: bottom; text-align: left;',
@@ -537,10 +610,11 @@ bscols(widths = 12,
                              ordering = FALSE,
                              columnDefs = list(list(visible = F, targets = 0),
                                                 list(className = 'dt-right',
-                                                     targets = 2:(2*length(all_years)+3)))
+                                                     targets = 2:(3*length(all_years)+4)))
                              )) %>% 
             DT::formatStyle(0, target = "row",
-              fontWeight = DT::styleEqual(dim(subtype_comp_data)[1],"bold"))
+              fontWeight = DT::styleEqual(dim(subtype_comp_data)[1],"bold")) %>% 
+               DT::formatStyle(c(1,4,7,10,13,16,19,22,25,28), `border-right` = "solid 1px")
             )
        )
 
@@ -550,42 +624,26 @@ bscols(widths = 12,
 
 ### **Clinical Impression of Stage of Illness**
 
-<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px"> Percentage of records with missing/unknown entry (NA/codes 98/99) and Percentage of records Yet to be determined (YTBD) for Clinical Impression of Stage of Illness</h2>
+<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px">Percentage of records with NA or code 98/99 entry (Unknown) and Percentage of records Yet to be determined (YTBD) for Clinical Impression of Stage of Illness</h2>
 
 ```{r stage-table}
 stage_comp_data <- comp_data %>%
-  filter(field_name == "clinical_impression_of_stage_of_illness") %>% select(geog, fy, perc_of_records_missing_not_known, perc_of_records_ytbd) %>%
+  filter(field_name == "clinical_impression_of_stage_of_illness") %>% 
+  select(geog, fy, number_of_records, perc_of_records_missing_not_known, perc_of_records_ytbd) %>%
   mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>%
   mutate(perc_of_records_ytbd = paste0(perc_of_records_ytbd, "%")) %>%
-  pivot_wider(names_from = fy, values_from = c(perc_of_records_missing_not_known, perc_of_records_ytbd),
-              names_vary = "slowest") %>%
-  slice(2:46,1)
-
- 
-
-# kable(stage_comp_data) %>%
-#   kable_styling(full_width = FALSE, position = "right") %>%
-#   row_spec(46, bold = TRUE) %>%
-#   # Add header above table 
-#   add_header_above(
-#         c(" " = 1,
-#            "2016/17" = 2,
-#           "2017/18" = 2,
-#           "2018/19" = 2,
-#           "2019/20" = 2,
-#           "2020/21" = 2,
-#           "2021/22" = 2,
-#           "2022/23" = 2,
-#           "2023/24" = 2,
-#           "2024/25" = 2
-#       ))%>%
-#   scroll_box(height = "670px", width = "fit-content")
+  pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known, perc_of_records_ytbd),
+              names_vary = "slowest")
+  
 
 bscols(widths = 12,
        div(style = css(width="98%", height="650px", margin="15px"),
           DT::datatable(stage_comp_data,
-                        container = headers,
+                        container = headers_ytbd,
                         rownames = TRUE,
+                       # caption = htmltools::tags$caption(
+                      # style = 'caption-side: bottom; text-align: left;',
+                      # "Note that Subtype of Dementia is an optional field"),
                         extensions = "FixedColumns",
               options = list(pageLength = 46,
                              scrollX = TRUE,
@@ -595,57 +653,37 @@ bscols(widths = 12,
                              ordering = FALSE,
                              columnDefs = list(list(visible = F, targets = 0),
                                                 list(className = 'dt-right',
-                                                     targets = 2:(2*length(all_years)+3)))
+                                                     targets = 2:(3*length(all_years)+4)))
                              )) %>% 
             DT::formatStyle(0, target = "row",
-              fontWeight = DT::styleEqual(dim(stage_comp_data)[1],"bold"))
+              fontWeight = DT::styleEqual(dim(stage_comp_data)[1],"bold")) %>% 
+               DT::formatStyle(c(1,4,7,10,13,16,19,22,25,28), `border-right` = "solid 1px")
             )
        )
-
 
 ```
 
 ### **Model of Care**
 
-<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px"> Percentage of records with missing/unknown entry (NA/codes 98/99) and Percentage of records Yet to be determined (YTBD) for Model of Care</h2>
-
+<h2 style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px">Percentage of referrals with NA or code 98/99 entry (Unknown) and Percentage of records Yet to be determined (YTBD) for Model of Care</h2>
 ```{r model-table}
 model_comp_data <- comp_data %>%
-  filter(field_name == "model_of_care") %>% select(geog, fy, perc_of_records_missing_not_known, perc_of_records_ytbd) %>%
+  filter(field_name == "model_of_care") %>% 
+  select(geog, fy, number_of_records, perc_of_records_missing_not_known, perc_of_records_ytbd) %>%
   mutate(perc_of_records_missing_not_known = paste0(perc_of_records_missing_not_known, "%")) %>%
   mutate(perc_of_records_ytbd = paste0(perc_of_records_ytbd, "%")) %>%
-  pivot_wider(names_from = fy, values_from = c(perc_of_records_missing_not_known, perc_of_records_ytbd),
-              names_vary = "slowest") %>%
-  slice(2:46,1) # %>% 
-#set_colnames(c("Health Board/Integration Authority", rep(c("NA/98/99", "YTBD"), 9)))
- 
- 
-
-# kable(model_comp_data) %>%
-#   kable_styling(full_width = FALSE) %>%
-#   row_spec(46, bold = TRUE) %>%
-#   # Add header above table
-#   add_header_above(
-#         c(" " = 1,
-#            "2016/17" = 2,
-#           "2017/18" = 2,
-#           "2018/19" = 2,
-#           "2019/20" = 2,
-#           "2020/21" = 2,
-#           "2021/22" = 2,
-#           "2022/23" = 2,
-#           "2023/24" = 2,
-#           "2024/25" = 2
-#       ))%>%
-#   scroll_box(height = "670px", width = "auto", fixed_thead = T)
-
-
+  pivot_wider(names_from = fy, values_from = c(number_of_records, perc_of_records_missing_not_known, perc_of_records_ytbd),
+              names_vary = "slowest")
+  
 
 bscols(widths = 12,
        div(style = css(width="98%", height="650px", margin="15px"),
           DT::datatable(model_comp_data,
-                        container = headers,
+                        container = headers_ytbd,
                         rownames = TRUE,
+                       # caption = htmltools::tags$caption(
+                       #style = 'caption-side: bottom; text-align: left;',
+                      # "Note that Subtype of Dementia is an optional field"),
                         extensions = "FixedColumns",
               options = list(pageLength = 46,
                              scrollX = TRUE,
@@ -654,11 +692,12 @@ bscols(widths = 12,
                              dom = "t",
                              ordering = FALSE,
                              columnDefs = list(list(visible = F, targets = 0),
-                                               list(className = 'dt-right', 
-                                                    targets = 2:(2*length(all_years)+3)))
+                                                list(className = 'dt-right',
+                                                     targets = 2:(3*length(all_years)+4)))
                              )) %>% 
             DT::formatStyle(0, target = "row",
-              fontWeight = DT::styleEqual(dim(model_comp_data)[1],"bold"))
+              fontWeight = DT::styleEqual(dim(model_comp_data)[1],"bold")) %>% 
+               DT::formatStyle(c(1,4,7,10,13,16,19,22,25,28), `border-right` = "solid 1px")
             )
        )
 
@@ -739,6 +778,8 @@ function filter_default() {
 
   document.getElementById("term_filter_geog_2").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
+  
+  
 
   document.getElementById("trend_filter_age_prop_hb").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
@@ -776,16 +817,16 @@ function filter_default() {
   document.getElementById("filter_ldp_age_2").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
+  document.getElementById("filter_sex_prop_ijb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_sex_prop_ijb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
   document.getElementById("filter_sex_prop_hb").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
 
   document.getElementById("filter_sex_prop_hb").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-   document.getElementById("filter_sex_prop_ijb").getElementsByClassName("selectized") 
-  [0].selectize.setValue("2023/24", false);
-
-  document.getElementById("filter_sex_prop_ijb").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
   document.getElementById("filter_trend_sex_pop").getElementsByClassName("selectized") 
@@ -847,6 +888,27 @@ function filter_default() {
 
   document.getElementById("filter_ldp_simd").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
+  
+     document.getElementById("filter_hb_simd_ldp").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_hb_simd_ldp").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+    document.getElementById("filter_ijb_simd_ldp").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_ijb_simd_ldp").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+   document.getElementById("filter_ldp_simd_bar").getElementsByClassName("selectized") 
+  [0].selectize.setValue("Scotland", false);
+
+  document.getElementById("filter_ldp_simd_bar").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  
+  
     document.getElementById("trend_filter_hb").getElementsByClassName("selectized") 
   [0].selectize.setValue("NHS Ayrshire & Arran", false);
 
@@ -906,6 +968,8 @@ function filter_default() {
 
   document.getElementById("trend_filter_outcomes_met").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
+  
+  
   
   document.getElementById("trend_filter_subtype_prop_hb").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
