--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -26,11 +26,9 @@ date: "`r paste('Data as at', format(end_date, '%d %B %Y'))`"
 
 ```{r setup, include=FALSE}
 
-# Remove tidylog
-detach("package:tidylog", unload = TRUE)
-
 # Load functions
 walk(dir(here::here("functions"), full.names = TRUE), source)
+
 
 # Load PDS data
 pds <- read_rds(get_mi_data_path("final_data", ext = "rds", test_output = test_output)) %>% 
@@ -52,20 +50,70 @@ err <- read_rds(get_mi_data_path("error_data", ext = "rds", test_output = test_o
                                 "Unknown",
                                 str_sub(ijb, 11, -1)))
 
-# calculate final data referrals for Scotland and health boards
+# calculate referrals for Scotland and health boards
 pds_ijb <- pds %>% arrange(ijb)
 
-pds_scot <- pds %>% group_by(health_board = "Scotland", ijb = "Scotland", fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>%   summarise(referrals = sum(referrals), .groups = "drop")
+pds_ijb %<>% rename(geog = ijb) 
+
+pds_ijb$geog<- factor(pds_ijb$geog, levels = unique(pds_ijb$geog))
+
+pds_scot <- pds %>% group_by(health_board = "Scotland", ijb = "Scotland", fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>%  summarise(referrals = sum(referrals), .groups = "drop")
+
+pds_scot %<>% rename(geog = ijb) 
+
+pds_scot$geog<- factor(pds_scot$geog, levels = unique(pds_scot$geog))
 
 pds_hb <- pds %>% group_by(health_board, fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>% 
   summarise(referrals = sum(referrals), .groups = "drop") %>% mutate(ijb = health_board, .before = fy)
 
+pds_hb %<>% rename(geog = ijb) 
+
+pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
+
 # combine data for ijb, hb and Scotland
 pds_all <- bind_rows(pds_scot, pds_hb, pds_ijb)
 
-pds_all %<>% rename(geog = ijb) 
-
 pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
+
+#get totals for all geogs, hbs, ijbs, scotland
+pds_all_totals <- pds_all %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
+
+pds_ijb_totals <- pds_ijb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
+
+pds_hb_totals <- pds_hb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
+
+pds_scot_totals <- pds_scot %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
+
+
+#get totals for all geogs, hbs, ijbs, scotland with LARGE AGE GROUPS
+pds_all_totals_2 <- bind_rows(pds_all_totals,
+  pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+)
+
+pds_all_totals_2$age_grp_2<- factor(pds_all_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+
+pds_ijb_totals_2 <- bind_rows(pds_ijb_totals,
+    pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+)
+
+pds_ijb_totals_2$age_grp_2<- factor(pds_ijb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+
+
+pds_hb_totals_2 <- bind_rows(pds_hb_totals,
+    pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+)
+
+pds_hb_totals_2$age_grp_2<- factor(pds_hb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+
+
+pds_scot_totals_2 <- bind_rows(pds_scot_totals,
+    pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+)
+
+pds_scot_totals_2$age_grp_2<- factor(pds_scot_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+
+#load population rates data
+pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/pop_data.rds")
 
 #create year lists
 provisional_year <- paste0(as.numeric(substr(last(finalised_years),1,4)) + 1,
@@ -81,44 +129,14 @@ all_years <- unique(pds_all$fy)
 
 if(qt == 4){full_years = all_years}else{full_years = all_years[-length(all_years)]}
 
+
 ```
 <!-- delete all of above when finished testing -->
 
 
 ```{r data-setup, include=FALSE}
 
-#get totals for scotland, hbs and ijbs
-pds_all_totals <- bind_rows(
-  pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_ijb %<>% rename(geog = ijb) 
-
-pds_ijb$geog<- factor(pds_ijb$geog, levels = unique(pds_ijb$geog))
-
-pds_ijb_totals <- bind_rows(
-    pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_hb %<>% rename(geog = ijb) 
-
-pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
-
-pds_hb_totals <- bind_rows(
-    pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_scot %<>% rename(geog = ijb) 
-
-pds_scot$geog<- factor(pds_scot$geog, levels = unique(pds_scot$geog))
-
-pds_scot_totals <- bind_rows(
-    pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
-)
-
 #prepare population rate data
-pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/pop_data.rds")
- 
 pop_data_trends <- pop_data %>%  filter(age_grp == "All", sex == "All", age_grp_2 == "All") %>% select(geog, year, pop_est)
 
 pds_all_cal_year <- pds_all_totals %>% 
@@ -176,7 +194,7 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {.tabset data-height=565}
+Row {.tabset data-height=1300}
 ----------------------------------------------------------------------
 
 ### **Scotland**
@@ -191,6 +209,25 @@ trends_plot <- plot_trend(pds_scot_totals, total_referrals, x ="Financial Year o
 bscols(widths = 12,
         div(style = css(width="98%", height="435px"), 
             trends_plot))
+
+```
+
+```{r trend-table}
+
+pds_all_totals %>%  
+            mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
+            pivot_wider(names_from = fy, values_from = total_referrals) %>% 
+            rename(`Health Board/Integration Authority Area` = geog) %>%
+            select(-age_grp_2) %>% 
+            kable(align = c("l", rep("r", length(all_years)))) %>% 
+            kable_styling(full_width = TRUE) %>%
+            column_spec(1, bold = TRUE) %>%
+  # Add header above table 
+            add_header_above(
+                       c(" " = 1,
+                         "Financial Year of Diagnosis" = length(all_years))) %>%
+            scroll_box(height = "740px")
+ 
 
 ```
 
@@ -221,6 +258,25 @@ trends_plot_ijb))
 
 ```
 
+```{r trend-table-ijb}
+
+pds_all_totals %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>% 
+            mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
+            pivot_wider(names_from = fy, values_from = total_referrals) %>% 
+            rename(`Integration Authority Area` = geog) %>%
+            select(-age_grp_2) %>% 
+            kable(align = c("l", rep("r", length(all_years)))) %>% 
+            kable_styling(full_width = TRUE) %>%
+            column_spec(1, bold = TRUE) %>%
+  # Add header above table 
+            add_header_above(
+                       c(" " = 1,
+                         "Financial Year of Diagnosis" = length(all_years))) %>%
+            scroll_box(height = "740px")
+ 
+
+```
+
 ### **Health Boards**
 
 ```{r dropdown-hb}
@@ -248,39 +304,15 @@ trends_plot_hb))
 
 ```
 
-Row {.tabset data-height=750}
-----------------------------------------------------------------------
-
-### **Integration Authority Areas**
-
-```{r trend-table-ijb}
-
-pds_all_totals %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>% 
-            mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
-            pivot_wider(names_from = fy, values_from = total_referrals) %>% 
-            rename(`Integration Authority Area` = geog) %>%
-            kable(align = c("l", rep("r", length(all_years)))) %>% 
-            kable_styling(full_width = FALSE) %>%
-            column_spec(1, bold = TRUE) %>%
-  # Add header above table 
-            add_header_above(
-                       c(" " = 1,
-                         "Financial Year of Diagnosis" = length(all_years))) %>%
-            scroll_box(height = "740px")
- 
-
-```
-
-### **Health Boards**
-
 ```{r trend-table-hb}
 
 pds_all_totals %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>% 
             mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
             pivot_wider(names_from = fy, values_from = total_referrals) %>%
             rename(`Health Board` = geog) %>%
+            select(-age_grp_2) %>% 
             kable(align = c("l", rep("r", length(all_years)))) %>%
-            kable_styling(full_width = FALSE) %>%
+            kable_styling(full_width = TRUE) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table 
             add_header_above(
@@ -326,7 +358,7 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {.tabset data-height=585}
+Row {.tabset data-height=1300}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -357,6 +389,23 @@ ijb_rates_plot <- plot_bar_pop_rate(pds_ijb_pop_data, pds_scot_pop_data_2)
 bscols(widths = 12,
         div(style = css(width="98%", height="425px"),
  ijb_rates_plot))
+
+```
+
+```{r trend-table-ijb-pop}
+
+pds_all_rates %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>%
+            pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
+            rename(`Integration Authority Area` = geog) %>%
+            kable(align = c("l", rep("r", length(all_years)))) %>%
+            kable_styling(full_width = TRUE) %>%
+            column_spec(1, bold = TRUE) %>%
+  # Add header above table
+            add_header_above(
+                       c(" " = 1,
+                         "Financial Year of Diagnosis" = length(all_years))) %>%
+            scroll_box(height = "720px")
+
 
 ```
 
@@ -391,6 +440,21 @@ pds_scot_pop_data <- SharedData$new(pds_scot_rates,
 
 ```
 
+```{r trend-table-hb-pop}
+
+pds_all_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
+            pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
+            rename(`Health Board` = geog) %>%
+            kable(align = c("l", rep("r", length(all_years)))) %>%
+            kable_styling(full_width = TRUE) %>%
+            column_spec(1, bold = TRUE) %>%
+  # Add header above table
+            add_header_above(
+                    c(" " = 1,
+                     "Financial Year of Diagnosis" = length(all_years)))
+
+```
+
 ### **Trend by Financial Year**
 
 ```{r dropdown-pop}
@@ -406,7 +470,6 @@ data_filter_hb_ijb_pop,NULL)
 
 ```
 
-
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Number of Individuals Diagnosed and Referred for PDS per 10,000 Population (18+)</h2>
 ```{r trend-plot-pop}
 
@@ -418,43 +481,19 @@ bscols(widths = 12,
 )
 ```
 
+```{r trend-table-pop}
 
-Row {.tabset data-height=750}
-----------------------------------------------------------------------
-
-### **Integration Authority Areas**
-
-```{r trend-table-ijb-pop}
-
-pds_all_rates %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>%
-            pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
-            rename(`Integration Authority Area` = geog) %>%
-            kable(align = c("l", rep("r", length(all_years)))) %>%
-            kable_styling(full_width = FALSE) %>%
-            column_spec(1, bold = TRUE) %>%
-  # Add header above table
-            add_header_above(
-                       c(" " = 1,
-                         "Financial Year of Diagnosis" = length(all_years))) %>%
-            scroll_box(height = "720px")
-
-
-```
-
-### **Health Boards**
-
-```{r trend-table-hb-pop}
-
-pds_all_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
+pds_all_rates %>% 
             pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
             rename(`Health Board` = geog) %>%
             kable(align = c("l", rep("r", length(all_years)))) %>%
-            kable_styling(full_width = FALSE) %>%
+            kable_styling(full_width = TRUE) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
                     c(" " = 1,
-                     "Financial Year of Diagnosis" = length(all_years)))
+                     "Financial Year of Diagnosis" = length(all_years))) %>%
+            scroll_box(height = "720px")
 
 ```
 
